# histopath-bim-des

./: .gitattributes  .gitignore  .pylintrc  LICENSE  README.md  docs.sh  pyproject.toml  scripts.sh
.github/workflows/: html_dir_to_gh_pages.yaml
assets/: histo.xlsx  histo_lift_down.xlsx
docs/: conf.py  diagram.puml  index.rst
docs/html/: .buildinfo  config.html  genindex.html  index.html  installation.html  objects.inv  processes.html  py-modindex.html  search.html  searchindex.js  simulation.html  thirdparty.html
docs/html/_modules/: index.html
docs/html/_sources/: config.md.txt  index.rst.txt  installation.md.txt  processes.md.txt  simulation.md.txt  thirdparty.md.txt
docs/html/apidoc/: modules.html  (+27 more)
histopath_bim_des/: bim.py  distribution.py  excel.py  model.py  specimens.py  util.py
histopath_bim_des/config/: __init__.py  arrivals.py  batching.py  config.py  distributions.py  global_vars.py  resources.py  runners.py  tasks.py
histopath_bim_des/process/: __init__.py  core.py  diagram.puml  p10_reception.py  p20_cutup.py  p30_processing.py  p40_microtomy.py  p50_staining.py  p60_labelling.py  p70_scanning.py  p80_qc.py  p90_reporting.py
notebooks/: config_compare.ipynb  erd.ipynb  plotting.ipynb  runner_times_base.ipynb  runner_times_lift_down.ipynb
notebooks/dev/: grid_test.ipynb  salabim.ipynb  test_config.ipynb
paper_rev3/: cutup.ipynb  ifc_parsing copy.ipynb  ifc_parsing.ipynb  ifc_parsing_cutup.ipynb  room_swap.ipynb
paper_rev3_v2/: ifc_parsing.ipynb  room_swap.err.feather  room_swap.ipynb  room_swap.means.feather
scripts/: webdoc.py
(+51 files in other folders)
